--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ li{
 a{
     text-decoration: none;
 }
+button:hover{
+    cursor: pointer;
+
+}
 
                 /* Container Area */
 .container{
@@ -97,9 +101,86 @@ a{
     gap: 2rem;
 }
 
+/* Header */
+.header-section1{
+    display: flex;
+    place-items: center;
+    padding: 1rem;
+    padding-right: 5rem;
+    gap: 1rem;
 
+}
 
+.btn{
+    background-color: white;
+    border: 0px;
+}
 
+.btn-img{
+    height: 1.5rem;
+}
+.prof-img{
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 100%;
+}
+.searchBtn{
+    margin-left: 1.5rem;
+}
+#searchBar{
+    flex: 2 2 0;
+ background-color: rgb(211, 209, 209);
+ border: 0px;
+ border-radius: 1rem;
+ height: 1.5rem;
+}
+.bellBtn{
+    margin-left: 5rem;
+}
+.nameLink{
+    color: black;
+    font-weight: bold;
+}
+/* header section 2 */
+
+.header-section2{
+    padding: 1rem;
+    padding-top: 0px;
+    padding-right: 5rem;
+    display: flex;
+    place-items: center;
+    gap: 1rem;
+}
+.blueBtn{
+    background-color: rgb(0, 162, 255);
+    color: white;
+    border: 0px;
+    height: 2rem;
+    width: 5rem;
+    border-radius: 1rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+
+}
+.newBtn{
+    margin-left: auto;
+}
+
+.prof-img2{
+    margin-left: 2rem;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 100%;
+}
+.smallText{
+    font-size: .8rem;
+    font-weight: 600;
+
+}
+.largeText{
+    font-size: 1.1rem;
+    font-weight: bold;
+}
 
 
 
