--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ button:hover{
 .sidebar{
     padding: 2rem;
     color: white;
+    /* min-width: 20vw; */
+    
     grid-area: 1/1/-1/3;
     font-size: 1.1rem;
     font-family: 'Cairo', sans-serif;
@@ -40,17 +42,20 @@ button:hover{
     gap: 2rem;
     grid-template-columns: 30vw;
     grid-template-rows: repeat(12,1fr);
+
 }
 .navbar li a,.branding li a{
     color: white;
 }
 .logo-area{
-    font-size: 2rem;
+    /* width: 10vw; */
+    font-size: 1.7vw;
     grid-area: 1/1/2/-1;
     display: flex;
     gap: .5rem;
     flex-wrap: wrap;
     font-weight: bold;
+    place-items: center;
 }
 
 .logo{
@@ -59,7 +64,7 @@ button:hover{
 
 }
 .logo-img{
-    height: 2rem;
+    height: 1.7vw;
 }
 .logo-text{
     grid-column: 2/-1;
@@ -74,9 +79,10 @@ button:hover{
     gap: .9rem;
 }
 .nav-img{
-    height: 1.1rem;
+    height: 1.1vw;
 }
 .navbar{
+    font-size: 1.1vw;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -92,10 +98,11 @@ button:hover{
     gap: .9rem;
 }
 .brand-img{
-    height: 1.1rem;
+    height: 1.1vw;
 }
 
 .branding{
+    font-size: 1.1vw;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -178,7 +185,7 @@ button:hover{
 
 }
 .largeText{
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: bold;
 }
 
@@ -186,7 +193,9 @@ button:hover{
 
 .header{
     grid-area: 1/3/3/-1;
-
+    font-family: 'Cairo', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     background-color: white;
 
 }
