--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,8 @@ button:hover{
 
 
 .header{
+    width: 80vw;
+    height: 15vh;
     grid-area: 1/3/3/-1;
     font-family: 'Cairo', sans-serif;
     font-family: 'Lato', sans-serif;
@@ -201,6 +203,66 @@ button:hover{
 }
 .main-content{
     grid-area: 3/3/-1/-1;
-
+    font-family: 'Cairo', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    padding: 1rem;
     background-color: rgb(211, 209, 209);
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(12,1fr);
+}
+
+.projects-area{
+    padding: .5rem;
+
+    overflow: auto;
+
+    grid-area: 1/1/-1/10;
+}
+.projects{
+display: grid;
+gap: 20px;
+grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+gap: 2rem;
+}
+.articles{
+    /* display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(12,1fr); */
+    padding: 1rem;
+    background-color: white;
+    border-radius: 1rem;
+    border-left-color:  orange;
+    border: solid 2px;
+}
+.sideColor{
+    /* background-color: orange; */
+    width: .1em;
+}
+.article{
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+}
+.sideColor{
+    /* grid-area: 1/1/-1/2; */
+}
+.articleHeading{
+    /* grid-area: 1/2/2/-1; */
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.articleText{
+    /* grid-area: 2/2/10/-1; */
+    font-size: 1rem;
+}
+
+.announcements{
+    background-color: pink;
+    grid-area: 1/10/8/-1;
+}
+.trending{
+    background-color: navy;
+    grid-area: 8/10/-1/-1;
 }
