--- a/css/style.css
+++ b/css/style.css
@@ -224,13 +224,14 @@ button:hover{
 display: grid;
 gap: 20px;
 grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+grid-template-rows: auto;
 gap: 2rem;
 }
 .articles{
     /* display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(12,1fr); */
-    padding: 1rem;
+    /* padding: 1rem; */
     background-color: white;
     border-radius: 1rem;
     border-left-color:  orange;
@@ -240,13 +241,32 @@ gap: 2rem;
     /* background-color: orange; */
     width: .1em;
 }
-.article{
+/* .articles{
     padding: 0px;
     margin: 0px;
-    display: flex;
+} */
+.articles{
+    padding: 0px;
+    margin: 0px;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: auto 1fr
 }
 .sideColor{
-    /* grid-area: 1/1/-1/2; */
+    width: 50%;
+    border-radius: 14px 0px 0px 14px;
+    grid-row: 1/-1;
+    background-color: orange;
+    margin: 0px;
+    padding: 0px;
+
+}
+.article-content{
+    margin: 0px;
+    padding: 0px;
+    grid-row: 1/2;
+    grid-column: 2/-1;
+
 }
 .articleHeading{
     /* grid-area: 1/2/2/-1; */
