--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,8 @@ button:hover{
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     background-color: white;
+    
+
 
 }
 .main-content{
@@ -226,34 +228,32 @@ gap: 20px;
 grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 grid-template-rows: auto;
 gap: 2rem;
+
+
 }
-.articles{
-    /* display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(12,1fr); */
-    /* padding: 1rem; */
-    background-color: white;
-    border-radius: 1rem;
-    border-left-color:  orange;
-    border: solid 2px;
-}
+
 .sideColor{
     /* background-color: orange; */
     width: .1em;
 }
-/* .articles{
-    padding: 0px;
-    margin: 0px;
-} */
+.projectText{
+    margin: 1rem;
+    font-size: 1.5rem;
+}
 .articles{
+    margin: 1rem;
+    background-color: white;
+    border-radius: 1rem;
     padding: 0px;
     margin: 0px;
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows: auto 1fr
+    grid-auto-rows: 1fr ;
+    box-shadow: 0px  0px 15px gray;
 }
 .sideColor{
     width: 50%;
+    height: 200%;
     border-radius: 14px 0px 0px 14px;
     grid-row: 1/-1;
     background-color: orange;
@@ -270,18 +270,53 @@ gap: 2rem;
 }
 .articleHeading{
     /* grid-area: 1/2/2/-1; */
+    margin: 1rem;
     font-size: 1.2rem;
     font-weight: bold;
 }
 .articleText{
     /* grid-area: 2/2/10/-1; */
+    margin: 1rem;
     font-size: 1rem;
 }
+.article-btn{
 
-.announcements{
-    background-color: pink;
-    grid-area: 1/10/8/-1;
+    margin: 1rem;
+    grid-column: 2/-1;
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+    /* align-items: flex-end; */
 }
+.announcements{
+    /* overflow: auto; */
+    background-color: white;
+    grid-area: 1/10/8/-1;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 1rem;
+    /* padding: 1rem; */
+    box-shadow: 0px  0px 15px gray;
+    border-radius: 1rem;
+    margin: 1rem;
+    place-items: center;
+}
+.announcement{
+    margin: 0px;
+    /* font-size: 1333px; */
+    /* overflow: auto; */
+}
+.a-heading{
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin: 1rem;
+}
+.a-text{
+    margin: 1rem;
+    padding: 1rem;
+}
+
 .trending{
     background-color: navy;
     grid-area: 8/10/-1/-1;
