--- a/css/style.css
+++ b/css/style.css
@@ -289,18 +289,27 @@ gap: 2rem;
     /* align-items: flex-end; */
 }
 .announcements{
+    min-width: min(300px,30vw);
     /* overflow: auto; */
     background-color: white;
     grid-area: 1/10/8/-1;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
-    gap: 1rem;
+    gap: 2rem;
     /* padding: 1rem; */
     box-shadow: 0px  0px 15px gray;
     border-radius: 1rem;
     margin: 1rem;
     place-items: center;
+}
+
+.announcement-container{
+    margin: 0rem 2rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 2rem;
 }
 .announcement{
     margin: 0px;
@@ -310,11 +319,12 @@ gap: 2rem;
 .a-heading{
     font-size: 1.1rem;
     font-weight: bold;
-    margin: 1rem;
+    /* margin: 1rem; */
+
 }
 .a-text{
-    margin: 1rem;
-    padding: 1rem;
+    /* margin: 1rem; */
+    padding: 0 0rem 1rem;
 }
 
 .trending{
