--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ button:hover{
 }
 
 .projects-area{
+    max-height: fit-content;
     padding: .5rem;
 
     overflow: auto;
@@ -224,7 +225,7 @@ button:hover{
 }
 .projects{
 display: grid;
-gap: 20px;
+gap: 1rem;
 grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 grid-template-rows: auto;
 gap: 2rem;
@@ -237,11 +238,18 @@ gap: 2rem;
     width: .1em;
 }
 .projectText{
+    
     margin: 1rem;
-    font-size: 1.5rem;
+    margin-top: 0rem;
+    font-size: 1.1rem;
+}
+.headingText{
+    margin: 1rem;
+    /* margin-top: 0rem; */
+    font-size: 1.1rem;
 }
 .articles{
-    margin: 1rem;
+    
     background-color: white;
     border-radius: 1rem;
     padding: 0px;
@@ -278,6 +286,7 @@ gap: 2rem;
     /* grid-area: 2/2/10/-1; */
     margin: 1rem;
     font-size: 1rem;
+    color: gray;
 }
 .article-btn{
 
@@ -286,48 +295,77 @@ gap: 2rem;
     display: flex;
     justify-content: flex-end;
     align-self: flex-end;
-    /* align-items: flex-end; */
+   
 }
 .announcements{
     min-width: min(300px,30vw);
-    /* overflow: auto; */
-    background-color: white;
-    grid-area: 1/10/8/-1;
+   
+    grid-area: 1/10/7/-1;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
-    gap: 2rem;
-    /* padding: 1rem; */
+   
+}
+
+.announcement-content{
+    background-color: white;
     box-shadow: 0px  0px 15px gray;
     border-radius: 1rem;
     margin: 1rem;
-    place-items: center;
-}
+    margin-top: 0px;
 
+
+}
 .announcement-container{
     margin: 0rem 2rem;
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
-    gap: 2rem;
+    grid-auto-rows: 1fr; */
+    /* gap: 0rem; */
 }
 .announcement{
-    margin: 0px;
-    /* font-size: 1333px; */
-    /* overflow: auto; */
+    margin: 1rem;
+    padding: 0px;
+
+    
 }
 .a-heading{
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: bold;
-    /* margin: 1rem; */
+    
 
 }
 .a-text{
-    /* margin: 1rem; */
+   
     padding: 0 0rem 1rem;
+    color: gray;
 }
 
 .trending{
-    background-color: navy;
-    grid-area: 8/10/-1/-1;
+   /* overflow: auto; */
+    grid-area: 7/10/-1/-1;
+    min-width: min(300px,30vw);
+    border-radius: 1rem;
+    margin: 1rem;
+    place-items: center;
+
+}
+.trending-accounts{
+    background-color: white;
+    box-shadow: 0px  0px 15px gray;
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 1rem;
+    margin: 1rem;
+    padding: 1rem;
+    place-items: center;
+}
+.account{
+    display: flex;
+    gap: 2rem ;
+}
+.about{
+    color: gray;
 }
